--- a/index.html
+++ b/index.html
@@ -1,9 +1,27 @@
+<!DOCTYPE html>
 <html>
 <head>
-<title>My website first HTML5 page</title>
+    <meta charset="UTF-8">
+    <title>Брееееед</title>
 </head>
 <body>
-<h1>Welcome!</h1>
-<p>Sorry, but our website is under development.</p>
+   <script>
+      var s, i=0
+     s=confirm("2+2=4?");
+       if(s==true){alert("Правильно!"); i++} else alert("Ні!") 
+     s=confirm("2+3=6?");
+       if(s==false){alert("Правильно!"); i++} else alert("Ні!")
+     s=confirm("2+4=6?");
+       if(s==true){alert("Правильно!"); i++} else alert("Ні!")
+     s=prompt("2+2=?");
+       if(s==4){alert("Правильно!"); i++} else alert("Ні!")
+     s=prompt("2+3=?");
+       if(s==5){alert("Правильно!"); i++} else alert("Ні!")
+     s=prompt("2+4=?");
+       if(s==6){alert("Правильно!"); i++} else alert("Ні!")
+       if(i>=5)alert("Чудово")
+       else if(i>=3)alert("Добре")
+       else alert("Погано")
+   </script>
 </body>
 </html>
